--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,11 @@
 <!-- #region head -->
 <!doctype html>
-<html
-  lang="en"
-  class="page"
->
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>THE MET</title>
-    <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       rel="preconnect"
       href="https://fonts.gstatic.com"
@@ -24,60 +15,39 @@
       href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="./styles/styles.scss"
-    />
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="/src/images/theMetLogo.png"
-    />
-    <script
-      src="scripts/main.js"
-      defer
-    ></script>
+    <link rel="stylesheet" href="./styles/styles.scss" />
+    <link rel="icon" type="image/x-icon" href="/src/images/theMetLogo.png" />
+    <script src="scripts/main.js" defer></script>
   </head>
   <!-- #endregion head -->
   <body class="page__body">
     <div class="page__content">
       <header class="header">
         <div class="top-bar">
-          <a
-            href="#"
-            class="top-bar__logo"
-          >
-            <img
-              src="images/theMetLogo.png"
-              alt="The MET logo"
-            />
+          <a href="#" class="top-bar__logo">
+            <img src="images/theMetLogo.png" alt="The MET logo" />
           </a>
 
           <div class="top-bar__tele-menu">
             <div class="icon icon--phone-wrapper">
-              <a
-                href="tel:+12125357700"
-                class="icon icon--phone"
-              ></a>
+              <a href="tel:+12125357700" class="icon icon--phone"></a>
 
               <div class="phone-numbers">
-                <div class="phone-numbers__item">
+                <a href="tel:+12125357700" class="phone-numbers__item">
                   THE MET FIFTH AVENUE
                   <br />
                   +1 212-535-7700
-                </div>
-                <div class="phone-numbers__item">
+                </a>
+
+                <a href="tel:+12129233700" class="phone-numbers__item">
                   THE MET CLOISTERS
                   <br />
                   +1 212-923-3700
-                </div>
+                </a>
               </div>
             </div>
 
-            <a
-              href="#menu"
-              class="icon icon--burger"
-            ></a>
+            <a href="#menu" class="icon icon--burger"></a>
           </div>
         </div>
         <div class="top-bar__middle">
@@ -90,69 +60,32 @@
       </header>
     </div>
 
-    <aside
-      class="page__menu menu"
-      id="menu"
-    >
+    <aside class="page__menu menu" id="menu">
       <div class="top-bar">
-        <a
-          href="#"
-          class="top-bar__logo"
-        >
-          <img
-            src="images/theMetLogo.png"
-            alt="The MET logo"
-          />
+        <a href="#" class="top-bar__logo">
+          <img src="images/theMetLogo.png" alt="The MET logo" />
         </a>
 
-        <a
-          href="#"
-          class="icon icon--close"
-        ></a>
+        <a href="#" class="icon icon--close"></a>
       </div>
 
       <div class="menu__content">
         <nav class="nav menu__nav">
           <ul class="nav__list">
             <li class="nav__item">
-              <a
-                class="nav__link"
-                href="#"
-              >
-                Home
-              </a>
+              <a class="nav__link" href="#"> Home </a>
             </li>
             <li class="nav__item">
-              <a
-                class="nav__link"
-                href="#about-us"
-              >
-                About Us
-              </a>
+              <a class="nav__link" href="#about-us"> About Us </a>
             </li>
             <li class="nav__item">
-              <a
-                class="nav__link"
-                href="#gallery"
-              >
-                gallery
-              </a>
+              <a class="nav__link" href="#gallery"> gallery </a>
             </li>
             <li class="nav__item">
-              <a
-                class="nav__link"
-                href="#explore-online"
-              >
-                Explore Online
-              </a>
+              <a class="nav__link" href="#explore-online"> Explore Online </a>
             </li>
             <li class="nav__item">
-              <a
-                class="nav__link"
-                href="#contacts"
-              >
-                Contacts
-              </a>
+              <a class="nav__link" href="#contacts"> Contacts </a>
             </li>
           </ul>
         </nav>
@@ -160,20 +93,14 @@
         <nav class="phones">
           <ul class="phones__list">
             <li class="phones__item">
-              <a
-                class="phones__link"
-                href="tel:+1 212-535-7710"
-              >
+              <a class="phones__link" href="tel:+1 212-535-7710">
                 The Met Fifth Avenue
                 <br />
                 +1 212-535-7710
               </a>
             </li>
             <li class="phones__item">
-              <a
-                class="phones__link"
-                href="tel:+1 212-923-3700"
-              >
+              <a class="phones__link" href="tel:+1 212-923-3700">
                 The Met Cloisters
                 <br />
                 +1 212-923-3700
@@ -186,10 +113,7 @@
     </aside>
 
     <main class="main">
-      <section
-        class="about-us"
-        id="about-us"
-      >
+      <section class="about-us" id="about-us">
         <h2 class="about-us__title">
           <div class="about-us__uptitle">Plan your visit</div>
           Museum hours
@@ -224,10 +148,7 @@
         </div>
       </section>
 
-      <section
-        class="gallery"
-        id="gallery"
-      >
+      <section class="gallery" id="gallery">
         <div class="gallery__title">
           <h2 class="gallery__title-text">Now On View</h2>
           <div class="gallery__subtitle">
@@ -311,10 +232,7 @@
         <button class="gallery__button">View all exhibitions</button>
       </section>
 
-      <section
-        class="explore-online"
-        id="explore-online"
-      >
+      <section class="explore-online" id="explore-online">
         <h2 class="explore-online__title">More to Explore Online</h2>
         <div class="explore-online__container">
           <img
@@ -354,10 +272,7 @@
         </div>
       </section>
 
-      <section
-        class="contacts"
-        id="contacts"
-      >
+      <section class="contacts" id="contacts">
         <h2 class="contacts__title">Contact us</h2>
         <div class="contacts__container">
           <div class="contacts__undertitle">The Met Fifth Avenue</div>
@@ -427,12 +342,7 @@
             required
           ></textarea>
 
-          <button
-            type="submit"
-            class="contacts__button"
-          >
-            Send
-          </button>
+          <button type="submit" class="contacts__button">Send</button>
         </form>
       </section>
     </main>
